--- a/EMS/core-bundle/src/Resources/views/form/fields.html.twig
+++ b/EMS/core-bundle/src/Resources/views/form/fields.html.twig
@@ -1088,11 +1088,13 @@
 	<div class="panel-footer">
 		{% if form.vars.multiple|default(false) %}
 			<div class="btn-group">
-				<input type="file" class="file-uploader-input" {% if form.vars.disabled %}disabled="disabled"{% endif %} multiple="multiple" data-label="{{ 'view.form.fields.asset.upload-files'|trans|e('html_attr') }}">
+				<input type="file" id="file-upload-{{ form.vars.id }}" class="file-uploader-input" {% if form.vars.disabled %}disabled="disabled"{% endif %} multiple="multiple">
+				<label class="btn btn-default" for="file-upload-{{ form.vars.id }}"><i class="fa fa-upload"></i> {{ 'view.form.fields.asset.upload-files'|trans|e('html_attr') }}</label>
 			</div>
 		{% else %}
 			<div class="btn-group">
-				<input type="file" class="file-uploader-input" {% if form.vars.disabled %}disabled="disabled"{% endif %} data-label="{{ 'view.form.fields.asset.upload-file'|trans|e('html_attr') }}">
+				<input type="file" id="file-upload-{{ form.vars.id }}" class="file-uploader-input" {% if form.vars.disabled %}disabled="disabled"{% endif %}>
+				<label class="btn btn-default" for="file-upload-{{ form.vars.id }}"><i class="fa fa-upload"></i> {{ 'view.form.fields.asset.upload-file'|trans|e('html_attr') }}</label>
 			</div>
 			<button type="button" data-href="{{ path('ems_core_uploaded_file_wysiwyg_modal') }}"  class="btn btn-small btn-default file-browse-server"><i class="fa fa-folder-open-o"></i><span class="sr-only">{{ 'view.form.fields.asset.browse-server'|trans }}</span></button>
 			<div class="btn-group">
@@ -1175,7 +1177,8 @@
 	</div>
 	<div class="panel-footer">
 		<div class="btn-group">
-			<input type="file" class="file-uploader-input">
+			<input type="file" id="upload-{{ form.vars.id }}" class="file-uploader-input">
+			<label for="upload-{{ form.vars.id }}"><i class="fa fa-upload"></i> Upload file</label>
 		</div>
 		<button type="button" data-href="{{ path('ems_core_uploaded_file_wysiwyg_modal') }}"  class="btn btn-small btn-default file-browse-server"><i class="fa fa-folder-open-o"></i><span class="sr-only">{{ 'view.form.fields.asset.browse-server'|trans }}</span></button>
 		<div class="btn-group">
