feat(media-library): add ux twig component

--- a/EMS/core-bundle/assets/css/app.scss
+++ b/EMS/core-bundle/assets/css/app.scss
@@ -29,6 +29,7 @@ $ionicons-font-path: $node-modules-path + "ionicons/dist/fonts/";
 @import "~bootstrap-datepicker/dist/css/bootstrap-datepicker.standalone.css";
 
 @import "ems";
+@import "./component/media_library";
 @import "./modules/tasks";
 @import "./modules/spacer";
 @import "./modules/flags";
