feat(media-library): getFiles javascript

--- a/EMS/core-bundle/src/Resources/views/components/media_library.html.twig
+++ b/EMS/core-bundle/src/Resources/views/components/media_library.html.twig
@@ -1,3 +1,23 @@
-<div class="media-library" data-hash="{{ hash }}">
-    <!-- implement file browser -->
+<div class="media-lib" data-hash="{{ hash }}">
+    <div class="media-lib-header"></div>
+    <div class="media-lib-content">
+        <div class="media-lib-left-column">
+            <div class="media-lib-folders">
+                <ul>
+                    <li>Folder 1</li>
+                    <li>Folder 2</li>
+                    <li>Folder 3</li>
+                    <li>Folder 4</li>
+                    <li>Folder 5</li>
+                    <li>Folder 6</li>
+                    <li>Folder 7</li>
+                    <li>Folder 8</li>
+                </ul>
+            </div>
+        </div>
+        <div class="media-lib-right-column">
+            <ul class="media-lib-files"></ul>
+        </div>
+    </div>
+    <div class="media-lib-footer"></div>
 </div>
