--- a/EMS/core-bundle/assets/css/component/media_library.scss
+++ b/EMS/core-bundle/assets/css/component/media_library.scss
@@ -7,10 +7,9 @@
 
   .media-lib-header,
   .media-lib-footer {
-    height: 30px;
+    min-height: 30px;
     flex-shrink: 0;
-    line-height: 30px;
-    padding: 0 8px;
+    padding: 8px;
     background-color: #f5f5f5;
   }
 
@@ -26,13 +25,14 @@
     resize: horizontal;
     overflow: auto;
     width: 20%;
+    max-width: 50%;
     flex-shrink:0;
     display: flex;
     flex-direction: column;
 
     div.media-lib-folders {
       overflow-y: auto;
-      padding: 0 8px;
+      padding: 8px;
       background-color: #DCDCDC;
     }
   }
@@ -40,7 +40,6 @@
   .media-lib-right-column {
     overflow-y: auto;
     width: 80%;
-    min-height: 250px;
     flex-grow: 1;
     border-left: solid 1px #ddd;
     padding: 8px 16px;
