--- a/EMS/core-bundle/src/Resources/views/components/media_library.html.twig
+++ b/EMS/core-bundle/src/Resources/views/components/media_library.html.twig
@@ -1,5 +1,8 @@
+{% trans_default_domain 'emsco-component' %}
 <div class="media-lib" data-hash="{{ hash }}">
-    <div class="media-lib-header"></div>
+    <div class="media-lib-header">
+        <button class="btn btn-xs btn-primary btn-add-folder">{{ 'media_library.folder.add.title'|trans }}</button>
+    </div>
     <div class="media-lib-content">
         <div class="media-lib-left-column">
             <div class="media-lib-folders">
