feat(media-library): getFolders and display them

--- a/EMS/core-bundle/src/Resources/views/components/media_library.html.twig
+++ b/EMS/core-bundle/src/Resources/views/components/media_library.html.twig
@@ -6,20 +6,11 @@
     <div class="media-lib-content">
         <div class="media-lib-left-column">
             <div class="media-lib-folders">
-                <ul>
-                    <li>Folder 1</li>
-                    <li>Folder 2</li>
-                    <li>Folder 3</li>
-                    <li>Folder 4</li>
-                    <li>Folder 5</li>
-                    <li>Folder 6</li>
-                    <li>Folder 7</li>
-                    <li>Folder 8</li>
-                </ul>
+                <ul class="media-lib-list-folders"></ul>
             </div>
         </div>
         <div class="media-lib-right-column">
-            <ul class="media-lib-files"></ul>
+            <ul class="media-lib-list-files"></ul>
         </div>
     </div>
     <div class="media-lib-footer"></div>
