--- a/EMS/core-bundle/assets/css/component/media_library.scss
+++ b/EMS/core-bundle/assets/css/component/media_library.scss
@@ -24,17 +24,51 @@
   .media-lib-left-column {
     resize: horizontal;
     overflow: auto;
+    overflow-x: hidden;
     width: 20%;
+    min-width: 10%;
     max-width: 50%;
     flex-shrink:0;
     display: flex;
     flex-direction: column;
+    background-color: #DCDCDC;
+  }
 
-    div.media-lib-folders {
-      overflow-y: auto;
-      padding: 8px;
-      background-color: #DCDCDC;
+  ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+
+    &.media-lib-list-folders {
+      width: 100%;
+
+      li {
+        &::before {
+          content: "\f114";
+          font-family: "FontAwesome", serif;
+          margin-right: 8px;
+        }
+
+        &:hover {
+          background-color: #f5f5f5;
+          cursor: pointer;
+        }
+
+        display: flex;
+        flex-direction: row;
+        background-color: #FFFFFF;
+        border-bottom: solid 1px #ddd;
+        padding: 8px;
+      }
+
     }
+
+    &.media-lib-list-files {
+
+    }
+
+
+
   }
 
   .media-lib-right-column {
