feat(media-library): add "id" config for media library

--- a/EMS/core-bundle/src/Resources/views/components/media_library.html.twig
+++ b/EMS/core-bundle/src/Resources/views/components/media_library.html.twig
@@ -1,5 +1,5 @@
 {% trans_default_domain 'emsco-component' %}
-<div class="media-lib" data-hash="{{ hash }}">
+<div class="media-lib" id="{{ id }}" data-hash="{{ hash }}">
     <div class="media-lib-header">
         <button class="btn btn-xs btn-primary btn-add-folder">{{ 'media_library.folder.add.title'|trans }}</button>
     </div>
