--- a/EMS/core-bundle/assets/css/component/media_library.scss
+++ b/EMS/core-bundle/assets/css/component/media_library.scss
@@ -109,13 +109,12 @@ div.media-lib {
 
       div.media-lib-uploads {
         background-color: #f5f5f5;
-        border: solid 1px #ddd;
         width: 100%;
-        padding: 16px 16px 8px;
+        padding: 8px;
 
         ul.media-lib-list-uploads {
           width: 100%;
-
+          margin-top: 8px;
           li {
             display: flex;
             flex-direction: column;
@@ -140,14 +139,13 @@ div.media-lib {
 
             padding: 8px;
             border-bottom: 1px dashed #DCDCDC;
-
             display: flex;
             flex-wrap: nowrap;
 
             > div {
               flex: 1;
 
-              &:last-child { flex: none; width: 120px; }
+              &:last-child { flex: none; width: 120px; text-align: right; }
             }
           }
         }
