feat(media-library): add breadcrumb and open folder after creation

--- a/EMS/core-bundle/src/Resources/views/components/media_library.html.twig
+++ b/EMS/core-bundle/src/Resources/views/components/media_library.html.twig
@@ -20,6 +20,7 @@
                 <label class="btn btn-sm btn-primary" for="media-lib-upload-{{ id }}">
                     <i class="fa fa-upload"></i> {{ 'media_library.file.add.title'|trans }}
                 </label>
+                <ul class="media-lib-list-breadcrumb"></ul>
             </div>
             <div class="media-lib-files">
                 <div class="media-lib-uploads" style="display: none;">
