--- a/EMS/core-bundle/assets/css/component/media_library.scss
+++ b/EMS/core-bundle/assets/css/component/media_library.scss
@@ -20,6 +20,39 @@ div.media-lib {
       padding: 8px;
       background-color: #f5f5f5;
       border-bottom: 1px solid #DCDCDC;
+      display: flex;
+      flex-direction: row;
+      flex-wrap: wrap;
+      column-gap: 8px;
+      row-gap: 8px;
+      align-items: center;
+
+      ul.media-lib-list-breadcrumb {
+        display: none;
+        flex-direction: row;
+        flex-wrap: wrap;
+        align-items: center;
+        background-color: #FFFFFF;
+        border: 1px solid #DCDCDC;
+        border-radius: 3px;
+        padding: 0 10px;
+
+        button {
+          border: 0;
+          padding: 5px 10px;
+          line-height: 1.5;
+          font-size: 12px;
+          background-color: transparent;
+          color: $brand-primary;
+          &:hover { text-decoration: underline; }
+        }
+
+        li:not(:last-child)::after {
+          content: "\f101 ";
+          color: #777777;
+          font-family: "FontAwesome", serif;
+        }
+      }
     }
 
     div.media-lib-left-column {
@@ -137,10 +170,12 @@ div.media-lib {
           li {
             &:first-child { font-weight: bold; }
 
-            padding: 8px;
+            padding: 8px 16px;
             border-bottom: 1px dashed #DCDCDC;
             display: flex;
             flex-wrap: nowrap;
+
+            a:hover { text-decoration: underline; }
 
             > div {
               flex: 1;
