ref: remove task filter version and show new versionTag
We can not filter on the new versionTag because it's in the rawData

--- a/EMS/core-bundle/src/Resources/views/revision/task/columns.twig
+++ b/EMS/core-bundle/src/Resources/views/revision/task/columns.twig
@@ -8,7 +8,9 @@
     </a>
 {%- endblock -%}
 
-{%- block version -%}{{- data.versionTag -}}{%- endblock -%}
+{%- block version_tag -%}
+    {{ data.versionTagField }}
+{%- endblock -%}
 {%- block owner -%}{{- data.owner|displayname -}}{%- endblock -%}
 {%- block assignee -%}{{- data.taskCurrent.assignee|displayname -}}{%- endblock -%}
 
