fix: translate new versionTag in tasks overview

--- a/EMS/core-bundle/src/Resources/views/revision/task/columns.twig
+++ b/EMS/core-bundle/src/Resources/views/revision/task/columns.twig
@@ -9,7 +9,11 @@
 {%- endblock -%}
 
 {%- block version_tag -%}
-    {{ data.versionTagField }}
+    {%- if data.versionTagField -%}
+        {{- 'revision.version_tag'|trans({'%version_tag%': data.versionTagField}) -}}
+    {%- else -%}
+        {{- 'revision.version_tag.empty'|trans -}}
+    {%- endif -%}
 {%- endblock -%}
 {%- block owner -%}{{- data.owner|displayname -}}{%- endblock -%}
 {%- block assignee -%}{{- data.taskCurrent.assignee|displayname -}}{%- endblock -%}
