fix: owner becomes requester
Now everybody can create tasks.
Removed owner role for contentType and revision.

--- a/EMS/core-bundle/src/Resources/views/revision/task/dashboard.html.twig
+++ b/EMS/core-bundle/src/Resources/views/revision/task/dashboard.html.twig
@@ -69,8 +69,8 @@
                     {% if filterForm.assignee is defined %}
                         {{ form_row(filterForm.assignee, {'row_attr': { 'class': 'col-md-3' }, 'label': 'task.filter.assignee'|trans  }) }}
                     {% endif %}
-                    {% if filterForm.owner is defined %}
-                        {{ form_row(filterForm.owner, {'row_attr': { 'class': 'col-md-3' }, 'label': 'task.filter.owner'|trans  }) }}
+                    {% if filterForm.requester is defined %}
+                        {{ form_row(filterForm.requester, {'row_attr': { 'class': 'col-md-3' }, 'label': 'task.filter.requester'|trans  }) }}
                     {% endif %}
                     <div class="col-md-12">
                         <input type="hidden" name="tab" value="{{ currentTab }}" />
