--- a/EMS/core-bundle/src/Resources/views/revision/task/columns.twig
+++ b/EMS/core-bundle/src/Resources/views/revision/task/columns.twig
@@ -15,7 +15,7 @@
         {{- 'revision.version_tag.empty'|trans -}}
     {%- endif -%}
 {%- endblock -%}
-{%- block owner -%}{{- data.owner|displayname -}}{%- endblock -%}
+{%- block requester -%}{{- data.taskCurrent.createdBy|displayname -}}{%- endblock -%}
 {%- block assignee -%}{{- data.taskCurrent.assignee|displayname -}}{%- endblock -%}
 
 {% block status %}
@@ -46,12 +46,5 @@
         <a class="btn btn-sm btn-default" href="{{ path('revision.new-draft', { 'type': data.giveContentType.name, 'ouuid': data.ouuid }) }}">
             <i class="fa fa-pencil-square-o" aria-hidden="true"></i> {{ 'task.dashboard.action.edit_revision'|trans }}
         </a>
-        {% if table.context.tab|default('') == 'manager' %}
-            <a href="#task-change-owner" class="btn btn-sm btn-default btn-task-change-owner-modal"
-               data-url="{{ path('ems_core_task_ajax_modal_change_owner', { 'revisionId': data.id }) }}"
-               data-title="{{ 'task.dashboard.action.change_owner'|trans }}">
-                <i class="fa fa-user-circle-o" aria-hidden="true"></i> {{ 'task.dashboard.action.change_owner'|trans }}
-            </a>
-        {% endif %}
     </div>
 {%- endblock -%}
