feat: add spreadsheet column for action

--- a/EMS/core-bundle/src/Resources/views/action/form.html.twig
+++ b/EMS/core-bundle/src/Resources/views/action/form.html.twig
@@ -35,6 +35,7 @@
                     </div>
                     <div class="export">
                         {{ form_row(form.accumulateInOneFile) }}
+                        {{ form_row(form.spreadsheet) }}
                         {{ form_row(form.mimeType) }}
                         {{ form_row(form.extension) }}
                     </div>
