fix(notification): treat accept not refreshing
In the controller we check if the accept button isClicked, because we are disabling it through the symfony form it is always returning false.

Fix is disabling the button in Twig. This way symfony form will return true if it was clicked

--- a/EMS/core-bundle/src/Resources/views/notification/inboxToTreat.html.twig
+++ b/EMS/core-bundle/src/Resources/views/notification/inboxToTreat.html.twig
@@ -100,7 +100,7 @@
 	      <div class="modal-footer">
 	      
 			<div class="btn-group">
-              	{{ form_widget(treatform.accept) }}		
+              	{{ form_widget(treatform.accept, { 'attr': { 'disabled': true } }) }}
               	{{ form_widget(treatform.reject) }}
 			</div>
 	      </div>
