--- a/EMS/core-bundle/src/Resources/views/elements/object-views-button.html.twig
+++ b/EMS/core-bundle/src/Resources/views/elements/object-views-button.html.twig
@@ -52,6 +52,10 @@
 									{{ template.label }}
 								</a></li>
 							{% endif %}
+						{% elseif template.renderOption is constant('EMS\\CoreBundle\\Form\\Field\\RenderOptionType::IMPORT') %}
+							{% if (is_granted(template.role)) or template.role == "not-defined" %}
+								<li><a href="#"><i class="{{ template.icon|raw }}"></i>{{ template.label }}</a></li>
+							{% endif %}
 						{% else %}
 							<li><a href="{{ path(template.public?'ems_data_custom_template_public':'ems_data_custom_template_protected', {
 										environmentName: environment.name,
