--- a/EMS/core-bundle/src/Resources/views/elements/object-views-button.html.twig
+++ b/EMS/core-bundle/src/Resources/views/elements/object-views-button.html.twig
@@ -53,9 +53,10 @@
 								</a></li>
 							{% endif %}
 						{% elseif template.renderOption is constant('EMS\\CoreBundle\\Form\\Field\\RenderOptionType::IMPORT') %}
-							{% if (is_granted(template.role)) or template.role == "not-defined" %}
-								<li><a href="#"><i class="{{ template.icon|raw }}"></i>{{ template.label }}</a></li>
-							{% endif %}
+							{%- if (is_granted(template.role)) or template.role == "not-defined" -%}
+								{%- set importModalUrl = path('emsco_data_action_modal_import',  {'environmentName': environment.name, 'templateId': template.id, 'ouuid': ouuid})  -%}
+								<li><a href="#" data-ajax-modal-url="{{ importModalUrl }}" data-ajax-modal-size="md"><i class="{{ template.icon|raw }}"></i>{{ template.label }}</a></li>
+							{%- endif -%}
 						{% else %}
 							<li><a href="{{ path(template.public?'ems_data_custom_template_public':'ems_data_custom_template_protected', {
 										environmentName: environment.name,
