refactor: improved demo's robots.txt

--- a/demo/skeleton/template/seo/robots.txt.twig
+++ b/demo/skeleton/template/seo/robots.txt.twig
@@ -5,6 +5,14 @@
 {%- if 'live' in trans_default_domain and app.request.host in canonicals -%}
 User-agent: *
 Disallow: /bundles/
+Disallow: /file/
+Disallow: /_
+Disallow: /metrics/
+Disallow: /iframe/
+Disallow: /init-form/
+Disallow: /form/
+Disallow: /ajax/
+Allow: /
 {% else %}
 User-agent: *
 Disallow: /
