--- a/demo/skeleton/template/redirects/apple-touch-icon.json.twig
+++ b/demo/skeleton/template/redirects/apple-touch-icon.json.twig
@@ -3,7 +3,12 @@
 {%- block request %}
     {% apply spaceless %}
         {{ {
-            url: asset('img/head/icon128.png', 'emsch'),
+            url: emsch_asset('img/head/icon.png', {
+                _config_type: 'image',
+                _width: 128,
+                _height: 128,
+                _quality: 0,
+            }),
             status: 301
         }|json_encode|raw }}
     {% endapply %}
