refactor: images in demo

--- a/demo/skeleton/template/base/bootstrap.html.twig
+++ b/demo/skeleton/template/base/bootstrap.html.twig
@@ -15,7 +15,7 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-light" data-active-message="{{ 'aria.navbar.active-item'|trans }}">
             <a class="navbar-brand" href="{{ path('emsch_homepage') }}">
-                <img src="{{ asset("img/logos/logo-#{locale}.png", 'emsch') }}" width="30" height="30" alt="{{ 'site.name'|trans }}">
+                <img src="{{ asset("img/logos/elasticms-ball-colour-rvb.svg", 'emsch') }}" width="30" height="30" alt="{{ 'site.name'|trans }}">
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                     aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="{{ 'aria.toggle-navbar'|trans }}">
