--- a/EMS/core-bundle/src/Resources/views/user/login.html.twig
+++ b/EMS/core-bundle/src/Resources/views/user/login.html.twig
@@ -22,7 +22,7 @@
 <div class="login-box">
     <div class="login-logo">
         <a href="{{ path('homepage') }}">
-            <img alt="elasticms's logo" src="{{ asset('images/logo.png', 'emscore') }}" width="360">
+            <img alt="elasticms's logo" src="{{ asset('images/logo.svg', 'emscore') }}" width="360">
         </a>
     </div>
     <div class="login-box-body">
